<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".Game">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="320dp"
            android:layout_height="253dp"
            android:layout_marginTop="32dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/request" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="409dp"
            android:layout_height="391dp"
            android:gravity="center"
            android:orientation="vertical"
            app:barrierMargin="20dp">

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:indeterminateDrawable="@android:drawable/progress_indeterminate_horizontal"
                android:max="20"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:progress="0"
                android:progressDrawable="@android:drawable/progress_horizontal" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="29dp"
                android:text="@string/try_to_guess"
                android:textAlignment="center"
                 />

            <EditText
                android:id="@+id/editTextNumberSigned"
                android:layout_width="238dp"
                android:layout_height="60dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="numberSigned"

                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/input_value"
                android:textColor="@color/white" />

            <ImageButton
                android:id="@+id/button2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:alpha="100"
                android:background="@android:color/transparent"
                android:contentDescription="@string/play_more"
                android:onClick="onClickRestart"
                android:scaleType="fitXY"
                android:src="@drawable/again"
                android:visibility="visible"

                 />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnLogOut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:onClick="logOut"
                    android:text="@string/log_out"
                    tools:ignore="TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:onClick="getInfo"
                    android:text="@string/info"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>